# wrench

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  Dockerfile  Dockerfile.nodocker  PROGRESS.md  PROJECT_PLAN.md  TODO.md  docker-compose-nonet.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  restart-local.sh  start-local.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: README.md  ci-audit.yml  ci-backend.yml  ci-docker-size.yml  ci-e2e.yml  ci-frontend.yml  ci.yml  cleanup.yml  docker-amd64.yml  docker-arm64.yml  docker-build.yml
backend/: Cargo.toml
backend/src/: api_types.rs  app_state.rs  config.rs  lib.rs  main.rs  notify.rs
backend/src/api/: ai.rs  docker.rs  host_health.rs  hosts.rs  logs.rs  market.rs  notifications.rs  sftp.rs  system.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/ssh/: client.rs  pool.rs  sftp.rs
backend/src/utils/: crypto.rs
backend/src/websocket/: terminal.rs
backend/tests/: api_test.rs
bridge/: index.js  package-lock.json  package.json  security.js
docs/: ARCHITECTURE.md  BACKEND_CONVENTIONS.md  FRONTEND_CONVENTIONS.md  PLUGIN_API.md  TESTING_STRATEGY.md
frontend/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.hmr-off.ts  vite.config.ts
frontend/src/: App.tsx  global-api.ts  index.css  vite-env.d.ts
frontend/src/components/: AuthGate.tsx  CodeMirrorEditor.tsx  CommandPalette.tsx  ConfirmModal.tsx  MarkdownPreview.tsx  PluginSandbox.tsx  ResizablePanel.tsx  ShortcutHelpModal.tsx  Skeleton.tsx  Toast.tsx  VirtualList.tsx
frontend/src/components/agent/: AgentDrawer.tsx  AgentMarkdown.tsx  AgentPanel.tsx  HostPickerModal.tsx
frontend/src/components/layout/: BottomNav.tsx  Layout.tsx  MainContent.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useSshHostSelector.ts
frontend/src/modules/audit/: AuditLogPage.tsx
frontend/src/modules/commands/: CommandFormModal.tsx  CommandOutput.tsx  CommandsList.tsx  CommandsPage.tsx  GroupManageModal.tsx  VariableModal.tsx  index.ts  (+1 more)
frontend/src/services/: ai-operations.ts  auth.ts  client-db-init.ts  client-db.ts  crypto.ts  db.ts  event-bus.ts  importExport.ts  initAuthFetch.ts  pluginManager.ts  pluginSandboxManager.ts  secure-store.ts  ssh-ensure.ts  ssh-session-manager.ts  websocket.ts
frontend/src/stores/: ai-store.ts  alert-store.ts  app-store.ts  file-store.ts  plugin-store.ts  ssh-store.ts  types.ts
frontend/src/styles/: plugin-panel.css
frontend/src/test/: setup.ts
frontend/src/types/: ai.ts  file.ts  index.ts  plugin.ts  ssh.ts
frontend/src/utils/: content-sniff.ts
plugins/adb-control/: plugin.js
plugins/ai-agent-skill/: plugin.js
plugins/ai-prompt-templates/: plugin.js
plugins/base64-encode/: manifest.json  plugin.js
plugins/case-converter/: manifest.json  plugin.js
plugins/color-picker/: manifest.json  plugin.js
plugins/diff-checker/: manifest.json  plugin.js
plugins/hash-generator/: manifest.json  plugin.js
plugins/json-formatter/: manifest.json  plugin.js
plugins/qrcode/: manifest.json  plugin.js
plugins/regex-tester/: manifest.json  plugin.js
plugins/system-monitor/: plugin.js
plugins/timestamp-convert/: manifest.json  plugin.js
plugins/yaml-formatter/: manifest.json  plugin.js
scripts/: auto-test.sh  ui-test.js
smartbox-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
smartbox-backend/src/: api_types.rs  app_state.rs  config.rs  error.rs  lib.rs  main.rs  notify.rs  response.rs
smartbox-backend/src/api/: ai.rs  alerts.rs  auth.rs  connections.rs  docker.rs  health.rs  host_health.rs  hosts.rs  logs.rs  market.rs  mod.rs  monitor.rs  notifications.rs  plugins.rs  scripts.rs  sftp.rs  ssh.rs  system.rs  vault.rs
smartbox-backend/src/db/: mod.rs
smartbox-backend/src/db/migrations/: 001_initial.sql
smartbox-backend/src/docker/: compose.rs  container.rs  image.rs  mod.rs  stats.rs
smartbox-backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
smartbox-backend/src/models/: mod.rs
smartbox-backend/src/ssh/: client.rs  executor.rs  mod.rs  pool.rs  session.rs  sftp.rs
smartbox-backend/src/utils/: crypto.rs  jwt.rs  mod.rs  path.rs  validator.rs
smartbox-backend/src/websocket/: batch.rs  docker_stats.rs  logs.rs  mod.rs  terminal.rs
smartbox-backend/tests/: api_test.rs
(+72 files in other folders)
