[package]
name = "wrench-backend"
version = "0.1.0"
edition = "2021"
description = "Wrench Backend - Rust server management platform"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto
aes-gcm = { version = "0.11", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.11"
rand = "0.9"

# SSH client
russh = "0.62"
russh-sftp = "2.3"

# Docker
bollard = "0.18"

# Validation
regex = "1.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.34", features = ["bundled", "backup"] }

# Auth
jsonwebtoken = "9"

# Helpers
bytes = "1.0"
futures-util = "0.3"
dashmap = "6"
parking_lot = "0.12"
