[package]
name = "wrench-backend"
version = "0.1.0"
edition = "2024"
description = "Wrench Backend - Rust server management platform"

# ── 开发环境：关闭增量编译，大幅减小 target/ 体积 ──
# 增量编译为每次编译保存快照，长期积累可达 10GB+；
# 关闭后每次全量编译约多 10-30 秒，但 target/ 保持精简。
[profile.dev]
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors", "compression-gzip", "request-id", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1.23", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto
aes-gcm = { version = "0.11", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.11"
rand = "0.10"

# SSH client
russh = "0.62"
russh-sftp = "2.3"

# Docker
bollard = "0.21"

# Validation
regex = "1.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Database
rusqlite = { version = "0.40", features = ["bundled", "backup"] }

# Cron expression parsing
cron = "0.17"

# Auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Helpers
bytes = "1.12"
futures-util = "0.3"
dashmap = "6"
parking_lot = "0.12"

[lints.clippy]
# Allow struct update syntax with Default::default() — cleaner than listing every field
needless_update = "allow"
